<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulEscuro"
    android:gravity="center|top">

    <ImageButton
        android:layout_marginLeft="-150dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/buttonBack"
        android:layout_marginTop="30dp"
        android:background="@drawable/seta_voltar"
        android:onClick="onBackPressed"
        />

    <TextView
        android:layout_marginTop="100px"
        android:layout_gravity="center"
        android:layout_width="1000px"
        android:layout_height="300px"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/branco"
        android:text="@string/ficha"
        android:textSize="20pt"
        android:gravity="center"
        android:background="@color/azulClaro" />

    <EditText
        android:id="@+id/nomePaciente"
        android:layout_width="1000px"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nome_completo"
        android:textColor="@color/branco"
        android:textColorHint="@color/branco"
        android:backgroundTint="@color/branco"
        android:textSize="10pt"
        android:layout_marginTop="200px"/>

    <TextView
        android:layout_width="1000px"
        android:layout_height="wrap_content"
        android:text="@string/nasc"
        android:textSize="10pt"
        android:textColor="@color/branco"
        android:layout_marginTop="150px"/>

    <!-- Mudando o layout para alinhar os inputs -->
    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"/>

    <Button
        android:id="@+id/continuar"
        android:layout_marginTop="50px"
        android:layout_width="500px"
        android:layout_height="wrap_content"
        android:textColor="@color/branco"
        android:fontFamily="sans-serif"
        android:textSize="10pt"
        android:background="@color/azulClaro"
        android:onClick="onContinuarPressed"
        android:text="@string/continuar" />

</LinearLayout>